k8s/manifests/pg-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg
  labels:
    app.kubernetes.io/name: db
    app.kubernetes.io/component: pg
spec:
  replicas: 
  selector:
    matchLabels:
      app.kubernetes.io/name: db
      app.kubernetes.io/component: pg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: db
        app.kubernetes.io/component: pg
    spec:
      containers:
        - name: pg
          image: postgres:13
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: pg
