k8s/manifests/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: web
          image:  neoner1576/web:v5
          imagePullPolicy: IfNotPresent
          command:
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8000
          ports:
          - containerPort: 8000
            name:  http
